修复 AI 复盘 schema 与观测链路
Co-Authored-By: OpenAI <noreply@openai.com>